--- a/_exercises/00_import_data.qmd
+++ b/_exercises/00_import_data.qmd
@@ -52,7 +52,7 @@ starwars %>%
   ggtitle("Hair Color Frequency of Star Wars Characters")
 ```
 
-BONUS
+### BONUS 1
 
 6.  Take a look at the structure of the `brodhead` object.
 
@@ -63,3 +63,32 @@ BONUS
     HINT: You can use the `glimpse() function`
 
 > ANSWER can be found in exercise_00_answers.Rmd file
+
+### BONUS 2
+
+1.  Import SPSS data containing labeled vectors: `data/student_satisfaction_test_data_from_qualtrics.sav`
+
+2.  Convert the labeled vector field `Q2` to its labeled values with `haven::as_factor()` and `mutate()`
+
+Hints:
+
+-   The {`here`} package is helpful for navigating to the data directory
+
+-   Notice the data-types of the variables. Using `glimpse()` or simply displaying the data frame, notice the data type: `<S3: haven_labelled>` used for some columns.
+
+```{r}
+library(haven)
+library(here)
+
+my_labeled_vectors_df <- 
+  read_sav(here("data", "student_satisfaction_test_data_from_qualtrics.sav"))
+```
+
+```{r}
+#| eval: false
+my_labeled_vectors_df
+
+my_labeled_vectors_df |> 
+  select(Q2) |> 
+  mutate(Q2_labels = _________(Q2))
+```
