--- a/_exercises/day_2_a/06_nest_exercise.Rmd
+++ b/_exercises/day_2_a/06_nest_exercise.Rmd
@@ -9,8 +9,7 @@ library(lubridate)
 # library(gapminder)
 ```
 
-
-Using one of the on-board datasets, nest data by a categorical element. Note: the data type you use for nesting does not have to be a factor data type.  Feel free to use your own dataset if you prefer, but the following are easily accessible, especially if you've previously loaded either the tidyverse or gapminder packages:  `starwars`; `fish_encounters`; `mpg`; `mtcars`; `economics_long`; `lubridate::lakers`; `gapminder::gapminder`
+Using one of the on-board data sets, nest data by a categorical element. Note: the data type you use for nesting does not have to be a factor data type. Feel free to use your own data set if you prefer, but the following are easily accessible, especially if you've previously loaded either the tidyverse or gapminder packages: `starwars`; `fish_encounters`; `mpg`; `mtcars`; `economics_long`; `lubridate::lakers`; `gapminder::gapminder`
 
 ```{r}
 gapminder::gapminder |> 
@@ -21,9 +20,9 @@ gapminder::gapminder |>
   nest()
 ```
 
-## A functon
+## A function
 
-Here's a function that you can use.  Execute the code chunk below an move to the next section.
+Here's a function that you can use. Execute the code chunk below an move to the next section.
 
 ```{r}
 my_first_plot_function <- function(my_df) {
@@ -33,11 +32,11 @@ my_first_plot_function <- function(my_df) {
 }
 ```
 
-## Practice iterating 
+## Practice iterating
 
-Use the above function, `my_first_plot_function`,  with `purrr::map()`
+Use the above function, `my_first_plot_function`, with `purrr::map()`
 
-You many need to install the {gapminder} package.  Make a nested data frame by `continent`.  Use `purr::map()` to apply the custom function, `my_first_plot_function`, to the gapminder dataset as a new variable:  `my_plot`.  Then, use the `pull()` function to view the new plots
+You many need to install the {`gapminder`} package. Make a nested data frame by `continent`. Use `purr::map()` to apply the custom function, `my_first_plot_function`, to the gapminder data set as a new variable: `my_plot`. Then, use the `pull()` function to view the new plots
 
 ```{r}
 gapminder::gapminder |> 
@@ -45,8 +44,8 @@ gapminder::gapminder |>
   mutate(my_plot = map(data, ____________)) #|> pull(my_plot)
 ```
 
-You can create the same outcome as above with an anonymous function.  
-a. What is `.x`?  
+You can create the same outcome as above with an anonymous function.\
+a. What is `.x`?\
 b. what is `~`?
 
 ```{r}
@@ -57,7 +56,7 @@ gapminder::gapminder |>
 
 ```
 
-Below is an artifact of troubleshooting.  As time allows, I'll demonstrate this process in the workshop.
+Below is an artifact of troubleshooting. As time allows, I'll demonstrate this process in the workshop.
 
 ```{r}
 make_my_plot <- function(my_df, my_name) { 
@@ -80,7 +79,3 @@ babynames::babynames |>
   pull(my_plot)
   
 ```
-
-
-
-
