--- a/_exercises/answers/05_functions_answers.Rmd
+++ b/_exercises/answers/05_functions_answers.Rmd
@@ -3,12 +3,11 @@ title: "Exercise 03"
 subtitle: "functions"
 ---
 
-Compose a function to take the square root, `sqrt()`, of a number which is multiplied by 10 
+Compose a function to take the square root, `sqrt()`, of a number which is multiplied by 10
 
 ```{r}
 library(tidyverse)
 ```
-
 
 ```{r}
 sqrt_by_10 <- function(my_x) {
@@ -24,8 +23,7 @@ sqrt_by_10(3)
 sqrt(3 * 10)
 ```
 
-Compose a function that removes spaces from a vector.   If time, convert the string to lower-case.
-Hint:  `stringr::str_remove_all()`
+Compose a function that removes spaces from a vector. If time, convert the string to lower-case. Hint: `stringr::str_to_lower()`
 
 ```{r}
 remove_spaces <- function(my_var) {
@@ -41,4 +39,3 @@ starwars |>
   select(name) |> 
   mutate(name = remove_spaces(name))
 ```
-
